created container with postgres and docker-compose